--- a/source/documentation/rest/maintenance_windows/delete.html
+++ b/source/documentation/rest/maintenance_windows/delete.html
@@ -2,7 +2,7 @@
 title: PagerDuty Developer
 layout: main
 ---
-<ul class="breadcrumb"><li><a href="../../rest.html">REST API</a></li><span class="divider">/</span><li><a href="../maintenance_windows.html">Maintenance Windows</a></li><span class="divider">/</span><li>Delete</li></ul>
+<ul class="breadcrumb"><li><a href="/documentation/rest">REST API</a></li><span class="divider">/</span><li><a href="/documentation/rest/maintenance_windows">Maintenance Windows</a></li><span class="divider">/</span><li>Delete</li></ul>
 <div class='section'>
 <h1 class="title">DELETE maintenance_windows/:id</h1><p>
 Remove or cancel a maintenance window. When deleting an ongoing maintenance window,
