--- a/source/documentation/rest/reports/index.html
+++ b/source/documentation/rest/reports/index.html
@@ -2,10 +2,10 @@
 title: Reports API
 layout: main
 ---
-<ul class="breadcrumb"><li><a href="../rest.html">REST API</a></li><span class="divider">/</span><li>Reports</li></ul>
+<ul class="breadcrumb"><li><a href="/documentation/rest">REST API</a></li><span class="divider">/</span><li>Reports</li></ul>
 <div class='section'>
 <title></title>
 <h1 class="title">Reports API</h1>
-<table class="table action_index"><caption>Access high level reports about alerts and incidents. Useful for creating graphs.</caption><thead><th>Resource</th><th>Description</th></thead><tbody><tr><td><a href="reports/alerts_per_time.html">GET alerts_per_time</a></td><td>Get high level statistics about the number of alerts (SMSes, phone calls and emails) sent for the desired time period, summed daily, weekly or monthly.</td></tr>
-<tr><td><a href="reports/incidents_per_time.html">GET incidents_per_time</a></td><td>Get high level statistics about the number of incidents created for the desired time period, summed daily, weekly or monthly.</td></tr>
+<table class="table action_index"><caption>Access high level reports about alerts and incidents. Useful for creating graphs.</caption><thead><th>Resource</th><th>Description</th></thead><tbody><tr><td><a href="/documentation/rest/reports/alerts_per_time">GET alerts_per_time</a></td><td>Get high level statistics about the number of alerts (SMSes, phone calls and emails) sent for the desired time period, summed daily, weekly or monthly.</td></tr>
+<tr><td><a href="/documentation/rest/reports/incidents_per_time">GET incidents_per_time</a></td><td>Get high level statistics about the number of incidents created for the desired time period, summed daily, weekly or monthly.</td></tr>
 </tbody></table></div>
