--- a/source/documentation/rest/schedules/create.html
+++ b/source/documentation/rest/schedules/create.html
@@ -2,7 +2,7 @@
 title: PagerDuty Developer
 layout: main
 ---
-<ul class="breadcrumb"><li><a href="../../rest.html">REST API</a></li><span class="divider">/</span><li><a href="../schedules.html">Schedules</a></li><span class="divider">/</span><li>Create</li></ul>
+<ul class="breadcrumb"><li><a href="/documentation/rest">REST API</a></li><span class="divider">/</span><li><a href="/documentation/rest/schedules">Schedules</a></li><span class="divider">/</span><li>Create</li></ul>
 <h1 class="title">POST schedules</h1><p>Create a new on-call schedule.</p>
 <h3>Resource URL</h3><div class="prism action-url language-bash"><pre>POST https://<span class="base_url contenteditable persist" contenteditable="true">&lt;subdomain&gt;</span>.pagerduty.com/api/v1/schedules</pre></div><h3>Parameters</h3><div class="table-container"><table class="table table-striped"><thead><th>Name</th><th>Type</th><th>Required</th><th>Description</th></thead><tbody><tr><td>overflow</td><td><a href="/documentation/rest/types#boolean">Boolean</a></td><td>No</td><td><p>
 Any on-call schedule entries that pass the date range bounds will be truncated at the
