--- a/source/documentation/rest/schedules/overrides/create.html
+++ b/source/documentation/rest/schedules/overrides/create.html
@@ -2,7 +2,7 @@
 title: PagerDuty Developer
 layout: main
 ---
-<ul class="breadcrumb"><li><a href="../../../rest.html">REST API</a></li><span class="divider">/</span><li><a href="../../schedules.html">Schedules</a></li><span class="divider">/</span><li><a href="../overrides.html">Overrides</a></li><span class="divider">/</span><li>Create</li></ul>
+<ul class="breadcrumb"><li><a href="/documentation/rest">REST API</a></li><span class="divider">/</span><li><a href="/documentation/rest/schedules">Schedules</a></li><span class="divider">/</span><li><a href="/documentation/rest/schedules/overrides">Overrides</a></li><span class="divider">/</span><li>Create</li></ul>
 <div class='section'>
 <h1 class="title">POST schedules/:schedule_id/overrides</h1><p>
 Create an override for a specific user covering the specified time range.
