--- a/source/documentation/rest/schedules/preview.html
+++ b/source/documentation/rest/schedules/preview.html
@@ -2,11 +2,11 @@
 title: PagerDuty Developer
 layout: main
 ---
-<ul class="breadcrumb"><li><a href="../../rest.html">REST API</a></li><span class="divider">/</span><li><a href="../schedules.html">Schedules</a></li><span class="divider">/</span><li>Preview</li></ul>
+<ul class="breadcrumb"><li><a href="/documentation/rest">REST API</a></li><span class="divider">/</span><li><a href="/documentation/rest/schedules">Schedules</a></li><span class="divider">/</span><li>Preview</li></ul>
 <div class='section'>
 <h1 class="title">POST schedules/preview</h1><p>
 Preview what a schedule would look like without saving it. This work the same as the
-<a href="update.html">update</a> or <a href="create.html">create</a> actions, except that
+<a href="/documentation/rest/schedules/update">update</a> or <a href="/documentation/rest/schedules/create">create</a> actions, except that
 the result is not persisted. Preview optionally takes two additional
 arguments, <code>since</code> and <code>until</code>, deliminating the span of the preview.
 </p>
