--- a/source/documentation/rest/services/email_filters/index.html
+++ b/source/documentation/rest/services/email_filters/index.html
@@ -2,9 +2,9 @@
 title: PagerDuty Developer
 layout: main
 ---
-<ul class="breadcrumb"><li><a href="../../rest.html">REST API</a></li><span class="divider">/</span><li><a href="../services.html">Services</a></li><span class="divider">/</span><li>Email Filters</li></ul>
+<ul class="breadcrumb"><li><a href="/documentation/rest">REST API</a></li><span class="divider">/</span><li><a href="/documentation/rest/services">Services</a></li><span class="divider">/</span><li>Email Filters</li></ul>
 <div class='section'>
 <title></title>
 <h1 class="title">Email Filters API</h1>
-<table class="table action_index"><caption>Email Filters are a set of rules that are applied to triggering email's body, subject and from address. It only applies to <code>generic_email</code> kind of Services. The way multiple filters are combined depends on the <a href="list.html">email_filter_mode</a> attribute of the service.</caption><thead><th>Resource</th><th>Description</th></thead><tbody><tr><td><a href="email_filters/create.html">POST services/:service_id/email_filters</a></td><td>Create a new Email Filter for the specified service.</td></tr><tr><td><a href="email_filters/update.html">PUT services/:service_id/email_filters/:id</a></td><td>Update an existing Email Filter.</td></tr><tr><td><a href="email_filters/delete.html">DELETE services/:service_id/email_filters/:id</a></td><td>Delete an existing Email Filter.</td></tr>
+<table class="table action_index"><caption>Email Filters are a set of rules that are applied to triggering email's body, subject and from address. It only applies to <code>generic_email</code> kind of Services. The way multiple filters are combined depends on the <a href="/documentation/rest/services/list">email_filter_mode</a> attribute of the service.</caption><thead><th>Resource</th><th>Description</th></thead><tbody><tr><td><a href="/documentation/rest/services/email_filters/create">POST services/:service_id/email_filters</a></td><td>Create a new Email Filter for the specified service.</td></tr><tr><td><a href="/documentation/rest/services/email_filters/update">PUT services/:service_id/email_filters/:id</a></td><td>Update an existing Email Filter.</td></tr><tr><td><a href="/documentation/rest/services/email_filters/delete">DELETE services/:service_id/email_filters/:id</a></td><td>Delete an existing Email Filter.</td></tr>
 </tbody></table></div>
