--- a/source/documentation/rest/services/regenerate_key.html
+++ b/source/documentation/rest/services/regenerate_key.html
@@ -2,7 +2,7 @@
 title: PagerDuty Developer
 layout: main
 ---
-<ul class="breadcrumb"><li><a href="../../rest.html">REST API</a></li><span class="divider">/</span><li><a href="../services.html">Services</a></li><span class="divider">/</span><li>Regenerate Key</li></ul>
+<ul class="breadcrumb"><li><a href="/documentation/rest">REST API</a></li><span class="divider">/</span><li><a href="/documentation/rest/services">Services</a></li><span class="divider">/</span><li>Regenerate Key</li></ul>
 <div class='section'>
 <div class='alert'>
 <strong>Warning!</strong>
