--- a/source/documentation/rest/users/contact_methods/create.html
+++ b/source/documentation/rest/users/contact_methods/create.html
@@ -2,7 +2,7 @@
 title: PagerDuty Developer
 layout: main
 ---
-<ul class="breadcrumb"><li><a href="../../../rest.html">REST API</a></li><span class="divider">/</span><li><a href="../../users.html">Users</a></li><span class="divider">/</span><li><a href="../contact_methods.html">Contact Methods</a></li><span class="divider">/</span><li>Create</li></ul>
+<ul class="breadcrumb"><li><a href="/documentation/rest">REST API</a></li><span class="divider">/</span><li><a href="/documentation/rest/users">Users</a></li><span class="divider">/</span><li><a href="/documentation/rest/users/contact_methods/">Contact Methods</a></li><span class="divider">/</span><li>Create</li></ul>
 <div class='section'>
 <h1 class="title">POST users/:user_id/contact_methods</h1><p>
 Create a new contact method for a given user. A contact method can be one of the following types:
