--- a/source/documentation/rest/users/notification_rules/index.html
+++ b/source/documentation/rest/users/notification_rules/index.html
@@ -2,14 +2,14 @@
 title: PagerDuty Developer
 layout: main
 ---
-<ul class="breadcrumb"><li><a href="../../rest.html">REST API</a></li><span class="divider">/</span><li><a href="../users.html">Users</a></li><span class="divider">/</span><li>Notification Rules</li></ul>
+<ul class="breadcrumb"><li><a href="/documentation/rest">REST API</a></li><span class="divider">/</span><li><a href="/documentation/rest/users">Users</a></li><span class="divider">/</span><li>Notification Rules</li></ul>
 <div class='section'>
 <title></title>
 <h1 class="title">Notification Rules API</h1>
 <p>
-When a user is assigned an <a href="../incidents.html">incident</a>, the user's notification rules are used to
-determine which <a href="contact_methods.html">contact method</a> will be used to alert the user and how
+When a user is assigned an <a href="/documentation/rest/incidents">incident</a>, the user's notification rules are used to
+determine which <a href="/documentation/rest/users/contact_methods/">contact method</a> will be used to alert the user and how
 long after the incident to do so.
 </p>
-<table class="table action_index"><caption>Access and manipulate the notification rules for a user.</caption><thead><th>Resource</th><th>Description</th></thead><tbody><tr><td><a href="notification_rules/list.html">GET users/:user_id/notification_rules</a></td><td>List existing notification rules for the specified user.</td></tr><tr><td><a href="notification_rules/show.html">GET users/:user_id/notification_rules/:id</a></td><td>Get details for a notification rule.</td></tr><tr><td><a href="notification_rules/create.html">POST users/:user_id/notification_rules</a></td><td>Create a new notification rule for the specified user.</td></tr><tr><td><a href="notification_rules/update.html">PUT users/:user_id/notification_rules/:id</a></td><td>Update an existing notification rule.</td></tr><tr><td><a href="notification_rules/delete.html">DELETE users/:user_id/notification_rules/:id</a></td><td>Remove a notification rule.</td></tr>
+<table class="table action_index"><caption>Access and manipulate the notification rules for a user.</caption><thead><th>Resource</th><th>Description</th></thead><tbody><tr><td><a href="/documentation/rest/users/notification_rules/list">GET users/:user_id/notification_rules</a></td><td>List existing notification rules for the specified user.</td></tr><tr><td><a href="/documentation/rest/users/notification_rules/show">GET users/:user_id/notification_rules/:id</a></td><td>Get details for a notification rule.</td></tr><tr><td><a href="/documentation/rest/users/notification_rules/create">POST users/:user_id/notification_rules</a></td><td>Create a new notification rule for the specified user.</td></tr><tr><td><a href="/documentation/rest/users/notification_rules/update">PUT users/:user_id/notification_rules/:id</a></td><td>Update an existing notification rule.</td></tr><tr><td><a href="/documentation/rest/users/notification_rules/delete">DELETE users/:user_id/notification_rules/:id</a></td><td>Remove a notification rule.</td></tr>
 </tbody></table></div>
