--- a/source/documentation/rest/users/on_call.html
+++ b/source/documentation/rest/users/on_call.html
@@ -2,7 +2,7 @@
 title: PagerDuty Developer
 layout: main
 ---
-<ul class="breadcrumb"><li><a href="../../rest.html">REST API</a></li><span class="divider">/</span><li><a href="../users.html">Users</a></li><span class="divider">/</span><li>On Call</li></ul>
+<ul class="breadcrumb"><li><a href="/documentation/rest">REST API</a></li><span class="divider">/</span><li><a href="/documentation/rest/users">Users</a></li><span class="divider">/</span><li>On Call</li></ul>
 <div class='section'>
 <h1 class="title">GET users/on_call</h1><p>List currently on-call users of your PagerDuty account, optionally filtered by a search query.</p>
 <p>If the <code>start</code> and <code>end</code> of an on-call object are <code>null</code>, then the user is always on-call for an escalation policy level.</p>
