--- a/source/documentation/rest/users/show_on_call.html
+++ b/source/documentation/rest/users/show_on_call.html
@@ -2,7 +2,7 @@
 title: PagerDuty Developer
 layout: main
 ---
-<ul class="breadcrumb"><li><a href="../../rest.html">REST API</a></li><span class="divider">/</span><li><a href="../users.html">Users</a></li><span class="divider">/</span><li>Show On Call</li></ul>
+<ul class="breadcrumb"><li><a href="/documentation/rest">REST API</a></li><span class="divider">/</span><li><a href="/documentation/rest/users">Users</a></li><span class="divider">/</span><li>Show On Call</li></ul>
 <div class='section'>
 <h1 class="title">GET users/:id/on_call</h1><p>Get a user object with that user's current on-call status. If the on-call object is an empty array, the user is never on-call.</p>
 <p>If the <code>start</code> and <code>end</code> of an on-call object are <code>null</code>, then the user is always on-call for an escalation policy level.</p>
