--- a/source/documentation/rest/pagination.html
+++ b/source/documentation/rest/pagination.html
@@ -5,7 +5,7 @@ permalink: /documentation/rest/pagination/
 redirect_from:
   - /documentation/rest/pagination.html
 ---
-<ul class="breadcrumb"><li><a href="/documentation/rest.html">REST API</a></li><span class="divider">/</span><li>Pagination</li></ul>
+<ul class="breadcrumb"><li><a href="/documentation/rest">REST API</a></li><span class="divider">/</span><li>Pagination</li></ul>
 <div class='section'>
 <h1 class="title">Pagination</h1>
 <p>
