--- a/source/documentation/rest/schedules/overrides/delete.html
+++ b/source/documentation/rest/schedules/overrides/delete.html
@@ -2,7 +2,7 @@
 title: PagerDuty Developer
 layout: main
 ---
-<ul class="breadcrumb"><li><a href="../../../rest.html">REST API</a></li><span class="divider">/</span><li><a href="../../schedules.html">Schedules</a></li><span class="divider">/</span><li><a href="../overrides.html">Overrides</a></li><span class="divider">/</span><li>Delete</li></ul>
+<ul class="breadcrumb"><li><a href="/documentation/rest">REST API</a></li><span class="divider">/</span><li><a href="/documentation/rest/schedules">Schedules</a></li><span class="divider">/</span><li><a href="/documentation/rest/schedules/overrides">Overrides</a></li><span class="divider">/</span><li>Delete</li></ul>
 <div class='section'>
 <h1 class="title">DELETE schedules/:schedule_id/overrides/:id</h1><p>
 Remove an override. You cannot remove a past override. If the override start time is before the current time,
