--- a/source/documentation/rest/schedules/show.html
+++ b/source/documentation/rest/schedules/show.html
@@ -2,7 +2,7 @@
 title: PagerDuty Developer
 layout: main
 ---
-<ul class="breadcrumb"><li><a href="../../rest.html">REST API</a></li><span class="divider">/</span><li><a href="../schedules.html">Schedules</a></li><span class="divider">/</span><li>Show</li></ul>
+<ul class="breadcrumb"><li><a href="/documentation/rest">REST API</a></li><span class="divider">/</span><li><a href="/documentation/rest/schedules">Schedules</a></li><span class="divider">/</span><li>Show</li></ul>
 <div class='section'>
 <h1 class="title">GET schedules/:id</h1><p>Show detailed information about a schedule, including entries for each layer and sub-schedule.</p><h3>Resource URL</h3><div class="prism action-url language-bash"><pre>GET https://<span class="base_url contenteditable persist" contenteditable="true">&lt;subdomain&gt;</span>.pagerduty.com/api/v1/schedules/<span class="url_param contenteditable" contenteditable="true">:id</span></pre></div><h3>Parameters</h3><div class="table-container"><table class="table table-striped"><thead><th>Name</th><th>Type</th><th>Required</th><th>Description</th></thead><tbody><tr><td>since</td><td><a href="/documentation/rest/types#datetime">Date</a></td><td>No</td><td><p>The start of the date range over which you want to return on-call schedule entries and on-call schedule layers.</p>
 </td></tr><tr><td>until</td><td><a href="/documentation/rest/types#datetime">Date</a></td><td>No</td><td>The end of the date range over which you want to return schedule entries and on-call schedule layers.
