--- a/source/documentation/rest/services/show.html
+++ b/source/documentation/rest/services/show.html
@@ -2,7 +2,7 @@
 title: PagerDuty Developer
 layout: main
 ---
-<ul class="breadcrumb"><li><a href="../../rest.html">REST API</a></li><span class="divider">/</span><li><a href="../services.html">Services</a></li><span class="divider">/</span><li>Show</li></ul>
+<ul class="breadcrumb"><li><a href="/documentation/rest">REST API</a></li><span class="divider">/</span><li><a href="/documentation/rest/services">Services</a></li><span class="divider">/</span><li>Show</li></ul>
 <div class='section'>
 <h1 class="title">GET services/:id</h1><p>Get details about an existing service.</p><h3>Resource URL</h3><div class="prism action-url language-bash"><pre>GET https://<span class="base_url contenteditable persist" contenteditable="true">&lt;subdomain&gt;</span>.pagerduty.com/api/v1/services/<span class="url_param contenteditable" contenteditable="true">:id</span></pre></div><h3>Parameters</h3><div class="table-container"><table class="table table-striped"><thead><th>Name</th><th>Type</th><th>Required</th><th>Description</th></thead><tbody><tr><td>include</td><td><a href="/documentation/rest/types#array">Array</a></td><td>No</td><td>Include extra information in the response. Possible values are <code>escalation_policy</code> (for inline Escalation Policy) and <code>email_filters</code> (for inline <a href="email_filters.html">Email Filters</a>).
 </td></tr></tbody></table></div><h3>Example</h3>
