--- a/source/documentation/rest/users/contact_methods/index.html
+++ b/source/documentation/rest/users/contact_methods/index.html
@@ -2,12 +2,12 @@
 title: PagerDuty Developer
 layout: main
 ---
-<ul class="breadcrumb"><li><a href="../../rest.html">REST API</a></li><span class="divider">/</span><li><a href="../users.html">Users</a></li><span class="divider">/</span><li>Contact Methods</li></ul>
+<ul class="breadcrumb"><li><a href="/documentation/rest">REST API</a></li><span class="divider">/</span><li><a href="/documentation/rest/users">Users</a></li><span class="divider">/</span><li>Contact Methods</li></ul>
 <div class='section'>
 <title></title>
 <h1 class="title">Contact Methods API</h1>
 <p>
-Contact methods describe the various channels (phone numbers, SMS numbers and email addresses) used to contact a user when an <a href="../incidents.html">incident</a> is assigned to the user.
+Contact methods describe the various channels (phone numbers, SMS numbers and email addresses) used to contact a user when an <a href="/documentation/rest/incidents/">incident</a> is assigned to the user.
 </p>
-<table class="table action_index"><caption>Access and manipulate the contact methods for a user.</caption><thead><th>Resource</th><th>Description</th></thead><tbody><tr><td><a href="contact_methods/list.html">GET users/:user_id/contact_methods</a></td><td>List existing contact methods for the specified user.</td></tr><tr><td><a href="contact_methods/show.html">GET users/:user_id/contact_methods/:id</a></td><td>Get details for a contact method.</td></tr><tr><td><a href="contact_methods/create.html">POST users/:user_id/contact_methods</a></td><td>Create a new contact method for the specified user.</td></tr><tr><td><a href="contact_methods/update.html">PUT users/:user_id/contact_methods/:id</a></td><td>Update an existing contact method.</td></tr><tr><td><a href="contact_methods/delete.html">DELETE users/:user_id/contact_methods/:id</a></td><td>Remove a contact method and any corresponding notification rules.</td></tr>
+<table class="table action_index"><caption>Access and manipulate the contact methods for a user.</caption><thead><th>Resource</th><th>Description</th></thead><tbody><tr><td><a href="/documentation/rest/users/contact_methods/list">GET users/:user_id/contact_methods</a></td><td>List existing contact methods for the specified user.</td></tr><tr><td><a href="/documentation/rest/users/contact_methods/show">GET users/:user_id/contact_methods/:id</a></td><td>Get details for a contact method.</td></tr><tr><td><a href="/documentation/rest/users/contact_methods/create">POST users/:user_id/contact_methods</a></td><td>Create a new contact method for the specified user.</td></tr><tr><td><a href="/docuentation/rest/users/contact_methods/update">PUT users/:user_id/contact_methods/:id</a></td><td>Update an existing contact method.</td></tr><tr><td><a href="/documentation/rest/users/contact_methods/delete">DELETE users/:user_id/contact_methods/:id</a></td><td>Remove a contact method and any corresponding notification rules.</td></tr>
 </tbody></table></div>
