--- a/source/documentation/rest/users/update.html
+++ b/source/documentation/rest/users/update.html
@@ -2,7 +2,7 @@
 title: PagerDuty Developer
 layout: main
 ---
-<ul class="breadcrumb"><li><a href="../../rest.html">REST API</a></li><span class="divider">/</span><li><a href="../users.html">Users</a></li><span class="divider">/</span><li>Update</li></ul>
+<ul class="breadcrumb"><li><a href="/documentation/rest">REST API</a></li><span class="divider">/</span><li><a href="/dpcumentation/rest/users">Users</a></li><span class="divider">/</span><li>Update</li></ul>
 <div class='section'>
 <h1 class="title">PUT users/:id</h1><p>Update an existing user.</p><h3>Resource URL</h3><div class="prism action-url language-bash"><pre>PUT https://<span class="base_url contenteditable persist" contenteditable="true">&lt;subdomain&gt;</span>.pagerduty.com/api/v1/users/<span class="url_param contenteditable" contenteditable="true">:id</span></pre></div><h3>Parameters</h3><div class="table-container"><table class="table table-striped"><thead><th>Name</th><th>Type</th><th>Required</th><th>Description</th></thead><tbody><tr><td>role</td><td><a href="/documentation/rest/types#string">String</a></td><td>No</td><td>The user's role. This can either be <code>admin</code>, <code>user</code>, or <code>limited_user</code>.
 </td></tr><tr><td>name</td><td><a href="/documentation/rest/types#string">String</a></td><td>No</td><td>The name of the user.
